--- a/source/Fasciculus.Eve/App.xaml
+++ b/source/Fasciculus.Eve/App.xaml
@@ -9,6 +9,7 @@
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
                 <ResourceDictionary Source="Resources/Styles/EveStyles.xaml" />
+                <ResourceDictionary Source="Resources/Styles/EveConverters.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
