--- a/source/Fasciculus.Eve/Pages/IndustryPage.xaml
+++ b/source/Fasciculus.Eve/Pages/IndustryPage.xaml
@@ -65,16 +65,21 @@
                     <HorizontalStackLayout Spacing="14" Padding="0,7,0,0">
                         <Button Text="Start" Command="{Binding StartCommand}" WidthRequest="60" />
                         <Label Text="Buy Orders" IsVisible="{Binding IsRunning}" />
-                        <ProgressBar Progress="{Binding BuyProgress.Value}"
-                                     ProgressColor="{Binding BuyProgress.Done, Converter={StaticResource doneToColor}}"
+                        <ProgressBar Progress="{Binding BuyOrdersProgress.Value}"
+                                     ProgressColor="{Binding BuyOrdersProgress.Done, Converter={StaticResource doneToColor}}"
                                      WidthRequest="100" IsVisible="{Binding IsRunning}" />
-                        <!--<fasciculus:LongProgressInfoBar Source="{Binding BuyProgress}" WidthRequest="100" IsVisible="{Binding IsRunning}" />-->
                         <Label Text="Sell Orders" IsVisible="{Binding IsRunning}" />
-                        <fasciculus:LongProgressInfoBar Source="{Binding SellProgress}" WidthRequest="100" IsVisible="{Binding IsRunning}" />
+                        <ProgressBar Progress="{Binding SellOrdersProgress.Value}"
+                                     ProgressColor="{Binding SellOrdersProgress.Done, Converter={StaticResource doneToColor}}"
+                                     WidthRequest="100" IsVisible="{Binding IsRunning}" />
                         <Label Text="Estimates" IsVisible="{Binding IsRunning}" />
-                        <fasciculus:WorkStateLabel Source="{Binding MarketPricesState}" WidthRequest="100" IsVisible="{Binding IsRunning}" />
+                        <ProgressBar Progress="{Binding MarketPricesProgress.Value}"
+                                     ProgressColor="{Binding MarketPricesProgress.Done, Converter={StaticResource doneToColor}}"
+                                     WidthRequest="100" IsVisible="{Binding IsRunning}" />
                         <Label Text="Indices" IsVisible="{Binding IsRunning}" />
-                        <fasciculus:WorkStateLabel Source="{Binding IndustryIndicesState}" WidthRequest="100" IsVisible="{Binding IsRunning}" />
+                        <ProgressBar Progress="{Binding IndustryIndicesProgress.Value}"
+                                     ProgressColor="{Binding IndustryIndicesProgress.Done, Converter={StaticResource doneToColor}}"
+                                     WidthRequest="100" IsVisible="{Binding IsRunning}" />
                     </HorizontalStackLayout>
                     <HorizontalStackLayout Spacing="14" Padding="0,14,0,0">
                         <VerticalStackLayout IsVisible="{Binding HasProductions}">
