--- a/source/Fasciculus.Eve/Pages/PlanetsPage.xaml
+++ b/source/Fasciculus.Eve/Pages/PlanetsPage.xaml
@@ -73,9 +73,9 @@
                     <HorizontalStackLayout Spacing="14" Padding="0,14,0,0">
                         <Button Text="Start" Command="{Binding StartCommand}" WidthRequest="60" />
                         <Label Text="Buy Orders" IsVisible="{Binding IsRunning}" />
-                        <fasciculus:LongProgressInfoBar Source="{Binding BuyProgress}" WidthRequest="100" IsVisible="{Binding IsRunning}" />
+                        <!--<fasciculus:LongProgressInfoBar Source="{Binding BuyProgress}" WidthRequest="100" IsVisible="{Binding IsRunning}" />-->
                         <Label Text="Sell Orders" IsVisible="{Binding IsRunning}" />
-                        <fasciculus:LongProgressInfoBar Source="{Binding SellProgress}" WidthRequest="100" IsVisible="{Binding IsRunning}" />
+                        <!--<fasciculus:LongProgressInfoBar Source="{Binding SellProgress}" WidthRequest="100" IsVisible="{Binding IsRunning}" />-->
                     </HorizontalStackLayout>
                     <HorizontalStackLayout Spacing="14" Padding="0,14,0,4" IsVisible="{Binding HasProductions}">
                         <Label Text="Output" FontAttributes="Bold" WidthRequest="200" />
