--- a/source/Fasciculus.GitHub.Io/Views/Shared/_Layout.cshtml
+++ b/source/Fasciculus.GitHub.Io/Views/Shared/_Layout.cshtml
@@ -1,9 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@model Document
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fasciculus</title>
+    <title>@Model.Title | Fasciculus</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 <body>
