--- a/source/Fasciculus.Site/Views/_ViewImports.cshtml
+++ b/source/Fasciculus.Site/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Fasciculus.GitHub
 @using Fasciculus.GitHub.Models
+@using Fasciculus.ApiDoc.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
