added namespace descriptions

--- a/source/Fasciculus.Site/Views/Api/Package.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Package.cshtml
@@ -19,6 +19,7 @@
     <thead>
         <tr>
             <th>Namespace</th>
+            <th>Description</th>
         </tr>
     </thead>
     <tbody>
@@ -26,6 +27,7 @@
 {
         <tr>
             <td>@ns.Name</td>
+            <td>@ns.Description</td>
         </tr>
 }
     </tbody>
