integrated Fasciculus.CodeAnalysis

--- a/source/Fasciculus.Site/Views/Api/Package.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Package.cshtml
@@ -33,4 +33,4 @@
     </tbody>
 </table>
 
-<partial name="~/Views/Api/TargetFrameworks.cshtml" model=Model.Package.TargetFrameworks />
+<partial name="~/Views/Api/TargetFrameworks.cshtml" model=Model.Package.Frameworks />
