--- a/source/Fasciculus.Site/Views/Api/Index.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@model ApiIndexDocument
 <h1>API Documentation</h1>
 
+<h2>All-In-One</h2>
+
+<p><a href="~/api/Combined/">Combined</a></p>
+
 <h2>Individual Packages</h2>
 
 <table class="table">
