--- a/source/Fasciculus.Site/Views/Api/Index.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Index.cshtml
@@ -12,7 +12,7 @@
 @foreach (var package in Model.Packages)
 {
         <tr>
-            <td><a href="~/api/@(package.Name)/">@package.Name</a></td>
+            <td><a href="~/api/@(package.Link)/">@package.Name</a></td>
             <td>@package.Description</td>
         </tr>
 }
