--- a/source/Fasciculus.Site/Views/Main/Privacy.cshtml
+++ b/source/Fasciculus.Site/Views/Main/Privacy.cshtml
@@ -1,2 +1,9 @@
 ﻿<h1>Privacy</h1>
+
 <p>This site does not use cookies.</p>
+
+<p>
+    As this site is hosted on "GitHub Pages" their
+    <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages#data-collection">Data Collection</a>
+    terms apply.
+</p>
