--- a/source/Fasciculus.Site/Views/Api/Package.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Package.cshtml
@@ -1,5 +1,5 @@
 ﻿@model ApiPackageDocument
-<h1>@Model.Package.Name Package</h1>
+<h1>Package: @Model.Package.Name</h1>
 
 <h2>In this article</h2>
 
