--- a/source/Fasciculus.Site/Views/_ViewImports.cshtml
+++ b/source/Fasciculus.Site/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
-﻿@using Fasciculus.GitHub
-@using Fasciculus.GitHub.Models
+﻿@using Fasciculus.Site
+@using Fasciculus.Site.Models
 @using Fasciculus.ApiDoc.Models
 @using Fasciculus.CodeAnalysis.Frameworks
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
