added tree navigation

--- a/source/Fasciculus.Site/Views/Api/Namespace.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Namespace.cshtml
@@ -5,7 +5,7 @@
     var packagesLabel = Model.Namespace.Packages.Count() > 1 ? "Packages" : "Package";
 }
 
-<h1>Namespace: @Model.Namespace.Name</h1>
+<h1>@Model.Namespace.Name Namespace</h1>
 
 <h2>In this article</h2>
 
