--- a/source/Fasciculus.Site/Views/Api/Package.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Package.cshtml
@@ -1,20 +1,15 @@
 ﻿@model ApiPackageDocument
-<h1>Package: @Model.Package.Name</h1>
 
+<h1>@Model.Package.Name Package</h1>
 <h2>In this article</h2>
-
 <ul>
     <li><a href="#definition">Definition</a></li>
     <li><a href="#namespaces">Namespaces</a></li>
     <li><a href="#applies-to">Applies to</a></li>
 </ul>
-
 <h2 id="definition">Definition</h2>
-
 <p>@Model.Package.Description</p>
-
 <h2 id="namespaces">Namespaces</h2>
-
 <table class="table">
     <thead>
         <tr>
@@ -23,14 +18,13 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var ns in Model.Package.Namespaces)
-{
-        <tr>
-            <td><a href="~/api/@(ns.Link)/">@ns.Name</a></td>
-            <td>@ns.Description</td>
-        </tr>
-}
+        @foreach (var ns in Model.Package.Namespaces)
+        {
+            <tr>
+                <td><a href="~/api/@(ns.Link)/">@ns.Name</a></td>
+                <td>@ns.Description</td>
+            </tr>
+        }
     </tbody>
 </table>
-
 <partial name="~/Views/Api/TargetFrameworks.cshtml" model=Model.Package.Frameworks />
