--- a/source/Fasciculus.Site/Views/Api/Packages.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Packages.cshtml
@@ -13,7 +13,7 @@
 {
         <tr>
             <td><a href="~/api/@(package.Link)/">@package.Name</a></td>
-            <td>@package.Description</td>
+            <td>@package.Comment.Summary</td>
         </tr>
 }
     </tbody>
