--- a/source/Fasciculus.Site/Views/Api/Package.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Package.cshtml
@@ -8,7 +8,7 @@
     <li><a href="#applies-to">Applies to</a></li>
 </ul>
 <h2 id="definition">Definition</h2>
-<p>@Model.Package.Description</p>
+<p>@Html.Raw(@Model.Package.Comment.Summary)</p>
 <h2 id="namespaces">Namespaces</h2>
 <table class="table">
     <thead>
@@ -22,7 +22,7 @@
         {
             <tr>
                 <td><a href="~/api/@(ns.Link)/">@ns.Name</a></td>
-                <td>@ns.Description</td>
+                <td>@Html.Raw(@ns.Comment.Summary)</td>
             </tr>
         }
     </tbody>
