--- a/source/Fasciculus.Site/wwwroot/css/fasciculus.css
+++ b/source/Fasciculus.Site/wwwroot/css/fasciculus.css
@@ -13,6 +13,10 @@ a[href^="//"]:after, a[href^="http://"]:after, a[href^="https://"]:after {
     left: 0.1rem;
 }
 
+c {
+    background-color: #eee;
+}
+
 .container {
     max-width: 100%;
 }
