added NavigationNode, NavigationForest and NavigationFactory

--- a/source/Fasciculus.Site/Views/Shared/_NavigationForest.cshtml
+++ b/source/Fasciculus.Site/Views/Shared/_NavigationForest.cshtml
@@ -1,6 +1,6 @@
 ﻿@model NavigationForest
 <ul class="fsc-navigation-forest">
-    @foreach (var n1 in Model.Roots)
+    @foreach (var n1 in Model.Trees)
     {
         <li>
             @if(n1.HasChildren)
