Navigation is back

--- a/source/Fasciculus.Site/Views/Api/TargetFrameworks.cshtml
+++ b/source/Fasciculus.Site/Views/Api/TargetFrameworks.cshtml
@@ -2,6 +2,10 @@
 <h2 id="applies-to">Applies To</h2>
 
 <table class="table">
+    <colgroup>
+        <col style="width:12rem" />
+        <col style="width:stretch" />
+    </colgroup>
     <thead>
         <tr>
             <th>Product</th>
