--- a/source/Fasciculus.Site/Views/Main/About.cshtml
+++ b/source/Fasciculus.Site/Views/Main/About.cshtml
@@ -4,7 +4,7 @@
 
 <p>
     The Fasciculus Project will provide several C# packages for public use.<br />
-    For now, it is a one-man-show of a single developer.
+    For now, it is a one-man-show.
 </p>
 
 <h2>Name and Logo</h2>
