--- a/source/Fasciculus.Site/Views/Shared/_Layout.cshtml
+++ b/source/Fasciculus.Site/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
                 <li class="nav-item"><a class="nav-link" href="~/"><img src="~/images/fasciculus.png" width="32px" height="32px" /></a></li>
                 <li class="nav-item"><a class="nav-link" href="~/api/">APIs</a></li>
                 <li class="nav-item"><a class="nav-link" href="~/about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="~/privacy.html">Privacy</a></li>
             </ul>
         </nav>
     </header>
@@ -35,7 +36,7 @@
     </div>
     <footer class="border-top footer text-muted">
         <div class="container">
-            <p>&copy; 2024-2025 The Fasciculus Project. <a href="~/privacy.html">Privacy</a></p>
+            <p>&copy; 2024-2025 The Fasciculus Project.</p>
         </div>
     </footer>
 </body>
