--- a/source/Fasciculus.Site/Views/_ViewImports.cshtml
+++ b/source/Fasciculus.Site/Views/_ViewImports.cshtml
@@ -1,5 +1,4 @@
-﻿@using Fasciculus.ApiDoc.Models
-@using Fasciculus.CodeAnalysis.Frameworking
+﻿@using Fasciculus.CodeAnalysis.Frameworking
 @using Fasciculus.Net.Navigating;
 @using Fasciculus.Site
 @using Fasciculus.Site.Models
