--- a/source/Fasciculus.Site/Views/Shared/_NavigationForest.cshtml
+++ b/source/Fasciculus.Site/Views/Shared/_NavigationForest.cshtml
@@ -1,27 +1,7 @@
 ﻿@model NavigationForest
 <ul class="fsc-navigation-forest">
-    @foreach (var n1 in Model.Trees)
+    @foreach (var tree in Model.Trees)
     {
-        <li>
-            @if(n1.HasChildren)
-            {
-                <details @(n1.IsOpen ? "open" : "")>
-                    <summary>@n1.Label</summary>
-                    <ul>
-                        <li><a href="~/@Model.Prefix/@n1.Link/">@n1.Label</a></li>
-                        @foreach (var n2 in n1.Children)
-                        {
-                            <li>
-                                <a href="~/@Model.Prefix/@n2.Link/">@n2.Label</a>
-                            </li>
-                        }
-                    </ul>
-                </details>
-            }
-            else
-            {
-                <a href="~/@Model.Prefix/@n1.Link/">@n1.Label</a>
-            }
-        </li>
+        <partial name="~/Views/Shared/_NavigationNode.cshtml" model=tree />
     }
 </ul>
