--- a/source/Fasciculus.Site/Views/Api/Package.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Package.cshtml
@@ -27,4 +27,4 @@
         }
     </tbody>
 </table>
-<partial name="~/Views/Api/TargetFrameworks.cshtml" model=Model.Package.Frameworks />
+<partial name="_TargetFrameworks.cshtml" model=Model.Package.Frameworks />
