--- a/source/Fasciculus.Site/Views/_ViewImports.cshtml
+++ b/source/Fasciculus.Site/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Fasciculus.CodeAnalysis.Frameworking
+@using Fasciculus.CodeAnalysis.Models
 @using Fasciculus.Net.Navigating;
 @using Fasciculus.Site
 @using Fasciculus.Site.Models
