--- a/source/Fasciculus.Site/Views/Api/Class.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Class.cshtml
@@ -11,6 +11,8 @@
 
 <h2 id="definition">Definition</h2>
 
+<partial name="_Packages.cshtml" model=Model.Class />
+
 <p>@Html.Raw(@Model.Class.Comment.Summary)</p>
 
-<partial name="~/Views/Api/TargetFrameworks.cshtml" model=Model.Class.Frameworks />
+<partial name="_TargetFrameworks.cshtml" model=Model.Class.Frameworks />
