added code to class description fixed comment not showing on UriPath

--- a/source/Fasciculus.Site/Views/Api/Class.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Class.cshtml
@@ -13,6 +13,8 @@
 
 <partial name="_Packages.cshtml" model=Model.Class />
 
+<code>@Model.Class.Modifiers class @Model.Class.Name</code>
+
 <p>@Html.Raw(@Model.Class.Comment.Summary)</p>
 
 <partial name="_TargetFrameworks.cshtml" model=Model.Class.Frameworks />
