--- a/source/Fasciculus.Site/Views/Shared/_Layout.cshtml
+++ b/source/Fasciculus.Site/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <ul class="nav">
                 <li class="nav-item"><a class="nav-link" href="~/"><img src="~/images/fasciculus.png" width="32px" height="32px" /></a></li>
+                <li class="nav-item"><a class="nav-link" href="~/blog/">Blog</a></li>
                 <li class="nav-item"><a class="nav-link" href="~/api/">APIs</a></li>
                 <li class="nav-item"><a class="nav-link" href="~/about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="~/privacy.html">Privacy</a></li>
