--- a/source/Fasciculus.Site/Views/_ViewImports.cshtml
+++ b/source/Fasciculus.Site/Views/_ViewImports.cshtml
@@ -1,7 +1,8 @@
-﻿@using Fasciculus.CodeAnalysis.Frameworking
+@using Fasciculus.CodeAnalysis.Frameworking
 @using Fasciculus.CodeAnalysis.Models
 @using Fasciculus.Net.Navigating
 @using Fasciculus.Site
 @using Fasciculus.Site.Api.Models
+@using Fasciculus.Site.Blog.Models
 @using Fasciculus.Site.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
