--- a/source/Fasciculus.Site/Views/Blog/Blog.cshtml
+++ b/source/Fasciculus.Site/Views/Blog/Blog.cshtml
@@ -2,5 +2,6 @@
 <h1>Blog</h1>
 @foreach (var entry in Model.Entries)
 {
-    <p><a href="~/@entry.Link">@entry.Title</a></p>
+    <h5><a href="~/@entry.Link">@entry.Title</a></h5>
+    <p>@(entry.Published.ToString("yyyy-MM-dd")):&ensp;@entry.Summary</p>
 }
