--- a/source/Fasciculus.Site/Views/Api/Package.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Package.cshtml
@@ -8,7 +8,7 @@
     <li><a href="#applies-to">Applies to</a></li>
 </ul>
 <h2 id="definition">Definition</h2>
-<p><a href="@(Model.RepositoryPrefix)@(Model.Package.RepositoryDirectory)">View on GitHub</a>.</p>
+<p><a href="@(Model.PackageUri)">View on GitHub</a>.</p>
 <p>@Html.Raw(@Model.Package.Comment.Summary)</p>
 <h2 id="namespaces">Namespaces</h2>
 <table class="table">
