refactored Symbol.Frameworks

--- a/source/Fasciculus.Site/Views/Api/_TargetFrameworks.cshtml
+++ b/source/Fasciculus.Site/Views/Api/_TargetFrameworks.cshtml
@@ -1,10 +1,10 @@
-﻿@model TargetFrameworks
+@model TargetFrameworks
 <h2 id="applies-to">Applies To</h2>
 
 <table class="table">
     <colgroup>
         <col style="width:12rem" />
-        <col style="width:stretch" />
+        <col style="width:auto" />
     </colgroup>
     <thead>
         <tr>
