--- a/source/Fasciculus.Site/Views/Shared/_Layout.cshtml
+++ b/source/Fasciculus.Site/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
                         <li class="nav-item"><a class="nav-link" href="~/"><img class="fsc-logo" src="~/images/fasciculus.png" /></a></li>
                         <li class="nav-item"><a class="nav-link" href="~/blog/">Blog</a></li>
                         <li class="nav-item"><a class="nav-link" href="~/api/">APIs</a></li>
+                        <li class="nav-item"><a class="nav-link" href="~/releases.html">Releases</a></li>
                     </ul>
                 </div>
                 <div class="col fsc-navbar-right">
