--- a/source/Fasciculus.Site/Views/Main/Releases.cshtml
+++ b/source/Fasciculus.Site/Views/Main/Releases.cshtml
@@ -14,7 +14,7 @@
 <h3>Tasks</h3>
 
 <p>
-    <img src="~/images/done.png" /> Programming<br />
-    <img src="~/images/done.png" /> Documenting<br />
-    <img src="~/images/todo.png" /> Generating API Documentation
+    <img class="fsc-tododone" src="~/images/done.png" /> Programming<br />
+    <img class="fsc-tododone" src="~/images/done.png" /> Documenting<br />
+    <img class="fsc-tododone" src="~/images/todo.png" /> Generating API Documentation
 </p>
