--- a/source/Fasciculus.Site/Views/_ViewImports.cshtml
+++ b/source/Fasciculus.Site/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using Fasciculus.Site.Api.Models
 @using Fasciculus.Site.Blog.Models
 @using Fasciculus.Site.Models
+@using Fasciculus.Site.Navigation
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
