refactored API view models

--- a/source/Fasciculus.Site/Views/Api/Class.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Class.cshtml
@@ -18,7 +18,7 @@
 
 <h2 id="definition">Definition</h2>
 
-<partial name="_TypeInfo.cshtml" model=Model />
+<partial name="_SymbolInfo.cshtml" model=Model />
 
 <code>@Model.Class.Modifiers class @Model.Class.Name</code>
 
