--- a/source/Fasciculus.Site/Views/Api/Interface.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Interface.cshtml
@@ -18,7 +18,7 @@
 
 <h2 id="definition">Definition</h2>
 
-<partial name="_TypeInfo.cshtml" model=Model />
+<partial name="_SymbolInfo.cshtml" model=Model />
 
 <code>@Model.Interface.Modifiers interface @Model.Interface.Name</code>
 
