--- a/source/Fasciculus.Site/Views/Api/Property.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Property.cshtml
@@ -14,6 +14,8 @@
 
 <h2 id="definition">Definition</h2>
 
+<partial name="_SymbolInfo.cshtml" model=Model />
+
 <code>@property.Modifiers @property.Type @property.Name @property.Accessors</code>
 
 <p>@Html.Raw(property.Comment.Summary)</p>
