--- a/source/Fasciculus.Site/Views/Api/Enum.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Enum.cshtml
@@ -11,7 +11,7 @@
 
 <h2 id="definition">Definition</h2>
 
-<partial name="_TypeInfo.cshtml" model=Model />
+<partial name="_SymbolInfo.cshtml" model=Model />
 
 <code>@Model.Enum.Modifiers enum @Model.Enum.Name</code>
 
