--- a/source/Fasciculus.Site/Views/Api/_SymbolInfo.cshtml
+++ b/source/Fasciculus.Site/Views/Api/_SymbolInfo.cshtml
@@ -1,4 +1,4 @@
-@model ApiTypeViewModel
+@model ApiSymbolInfoViewModel
 @{
     string packagesLabel = Model.Symbol.Packages.Count() == 1 ? "Package" : "Packages";
     bool firstPackage = true;
